Updates OpenTable widget integration to fix a bug on Safari

--- a/source/stylesheets/components/_banners.css.sass
+++ b/source/stylesheets/components/_banners.css.sass
@@ -177,7 +177,8 @@
       text-decoration: none
       text-transform: uppercase
 
-.opentable
+.opentable,
+.opentable-mobile,
   background: $nude
   position: relative
   h2
