--- a/source/stylesheets/components/_opentable.css.sass
+++ b/source/stylesheets/components/_opentable.css.sass
@@ -1,67 +1,11 @@
-#OT_partySizeLbl, #OT_dateLbl, #OT_timeLbl
-  font:
-    size: rem(14)
-    family: 'Gotham A', 'Gotham B'
-    weight: 700
-  color: black
-  text-transform: uppercase
-  vertical-align: middle
-
-h2.OT_feedTitle, p#dateDisplay
-  display: none !important
-
-#OT_partySize, #OT_date, #OT_time
-  top: rem(18) !important
-
-#OT_dateLbl
-  left: rem(165) !important
-
-#OT_timeLbl
-  left: rem(351) !important
-
-#OT_time
-  left: rem(419) !important
-
-#OT_date
-  left: rem(234) !important
-
-input[type='submit'].OT_TableButton
-  position: absolute
-  top: rem(-5)
-  background: black
-  border-radius: rem(2)
-  color: white
-  text-transform: uppercase
-  padding: 0 rem(12)
-  height: rem(42)
-  line-height: rem(42)
-  cursor: pointer
-  width: rem(170)
-  left: rem(30)
-
-#OT_searchWrapperAll
-  width: rem(690) !important
-  margin: rem(50) auto 0 auto !important
-
-#OT_searchWrapper #startDate, #OT_searchWrapper .OT_feedFormfieldCalendar
-  width: rem(107) !important
-
 .opentable
   position: relative
   height: auto
-  display: table
   width: 100%
-  padding: rem(20) 0
+  padding: rem(80) 0
+  display: none
   +media($medium)
-    height: rem(316)
-    padding: 0
-  article
-    display: none
-    vertical-align: middle
-    height: 100%
-    width: 100%
-    +media($medium)
-      display: table-cell
+    display: block
   p
     text-align: center
     position: relative
@@ -71,25 +15,41 @@ input[type='submit'].OT_TableButton
     top: 30px
     left: 290px
     z-index: 0
-  .hide-large
+  #OT_searchWrapperAll
+    .ot
+      &-title,
+      &-powered-by
+        display: none
+      &-dtp-picker
+        width: 100%
+        max-width: 900px
+        margin: 0 auto
+        &-form
+          background: transparent
+          border: none
+          display: flex
+          justify-content: space-between
+      &-date-picker,
+      &-party-size-picker,
+      &-time-picker
+        background-color: #fff
+        border-left: none
+        border-right: none
+      &-button
+        background-color: $yellow
+        border: none
+        box-shadow: none
+        border-radius: rem(3)
+        line-height: 1.3
+        padding: rem(10) rem(30)
+        box-sizing: border-box
+        text-decoration: none
+        color: black
+        display: inline-block
+        -webkit-appearance: none
+  &-mobile
+    display: block
+    padding: rem(40) 0
     text-align: center
-    a
-      color: black
-      text-decoration: none
-      display: block
-      text-transform: uppercase
-      font:
-        size: rem(14)
-        family: 'Gotham A', 'Gotham B'
-        weight: 700
-
-#OT_submitWrap
-  input[type=IMAGE]
-    margin-left: rem(30)
-
-#OT_searchWrapper .feedFormField, #OT_searchWrapper .feedFormField option
-  padding: 0 rem(10)
-
-@-moz-document url-prefix()
-  #OT_searchWrapper .feedFormField, #OT_searchWrapper .feedFormField option
-    padding: 0 rem(5)
+    +media($medium)
+      display: none
